# memfabric

./: .gitignore  README.md  README_CN.md  pyproject.toml
configs/: claude-code.mcp.json  codex.config.json  cursor.mcp.json  hermes.config.yaml  openclaw.config.json
docs/: quickstart.md
src/memfabric/: __init__.py  config.py  conflict.py  lineage.py  namespace.py  server.py  store.py  vector.py
tests/: test_store.py
